git s<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_theme"
        tools:context=".MainActivity"
        >

        <ImageView
            android:id="@+id/imageView_preview"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:fitsSystemWindows="false"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/preview2"/>

        <ImageView
            android:id="@+id/imageView_poster"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_preview"
            app:layout_constraintDimensionRatio="400:576"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/imageView_preview"
            app:layout_constraintVertical_bias="0.52"
            app:srcCompat="@drawable/poster" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="textView_movie_detail, imageView_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="330dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="button_buy, button_rent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="386dp" />


        <TextView
            android:id="@+id/textView_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/textView_movie_detail"
            app:layout_constraintEnd_toStartOf="@id/add_playlist"
            app:layout_constraintStart_toEndOf="@+id/imageView_poster"
            app:layout_constraintTop_toBottomOf="@+id/imageView_preview"
            tools:text="@string/movie_title"/>

        <TextView
            android:id="@+id/textView_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/movie_detail"
            app:layout_constraintBottom_toTopOf="@id/barrier_top"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@+id/imageView_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView_movie_title" />


        <ImageButton
            android:id="@+id/add_playlist"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:background="@null"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_preview" />

        <Button
            android:id="@+id/button_buy"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/buy_from"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/view_divider_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_rent"
            app:layout_constraintTop_toBottomOf="@id/barrier_top"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_rent"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/rent_from"
            app:layout_constraintBottom_toTopOf="@id/view_divider_top"
            app:layout_constraintEnd_toStartOf="@+id/button_buy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/barrier_top" />

        <View
            android:id="@+id/view_divider_top"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/gray_divider"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/barrier_bottom" />

        <View
            android:id="@+id/view_divider_bottom"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            android:background="@color/gray_divider"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/button_rating" />

        <ImageButton
            android:id="@+id/button_rating"
            android:layout_width="83dp"
            android:layout_height="80dp"
            android:background="@null"
            android:src="@drawable/ic_rating"
            app:layout_constraintEnd_toStartOf="@+id/button_shape_accent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_top" />

        <ImageButton
            android:id="@+id/button_shape_accent"
            android:layout_width="83dp"
            android:layout_height="80dp"
            android:background="@null"
            android:src="@drawable/ic_brightness_accent"
            app:layout_constraintEnd_toStartOf="@+id/button_shape_yellow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_rating"
            app:layout_constraintTop_toBottomOf="@id/view_divider_top" />

        <ImageButton
            android:id="@+id/button_shape_yellow"
            android:layout_width="83dp"
            android:layout_height="80dp"
            android:background="@null"
            android:src="@drawable/ic_brightness_yellow"
            app:layout_constraintEnd_toStartOf="@+id/button_shape_accent1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_shape_accent"
            app:layout_constraintTop_toBottomOf="@id/view_divider_top" />

        <ImageButton
            android:id="@+id/button_shape_accent1"
            android:layout_width="83dp"
            android:layout_height="80dp"
            android:background="@null"
            android:src="@drawable/ic_brightness_accent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_shape_yellow"
            app:layout_constraintTop_toBottomOf="@id/view_divider_top" />


        <ImageButton
            android:id="@+id/button_family"
            android:layout_width="83dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:src="@drawable/ic_family"
            app:layout_constraintBottom_toBottomOf="@+id/button_shape_accent"
            app:layout_constraintEnd_toEndOf="@+id/button_shape_accent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_shape_accent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_top"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/tomato"
            android:layout_width="34dp"
            android:layout_height="31dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_shape_yellow"
            app:layout_constraintEnd_toEndOf="@+id/button_shape_yellow"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/button_shape_yellow"
            app:layout_constraintTop_toTopOf="@+id/button_shape_yellow"
            app:layout_constraintVertical_bias="0.51"
            app:srcCompat="@drawable/tomato" />

        <ImageButton
            android:id="@+id/similar"
            android:layout_width="83dp"
            android:layout_height="80dp"
            android:layout_marginTop="17dp"
            android:background="@null"
            android:src="@drawable/ic_similar"
            app:layout_constraintBottom_toBottomOf="@+id/button_shape_accent1"
            app:layout_constraintEnd_toEndOf="@+id/button_shape_accent1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button_shape_accent1"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_top"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:textSize="10sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/button_shape_accent"
            app:layout_constraintStart_toStartOf="@+id/button_shape_accent"
            app:layout_constraintTop_toBottomOf="@+id/button_shape_accent" />

        <TextView
            android:id="@+id/textView_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratings"
            android:textSize="10sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/button_rating"
            app:layout_constraintStart_toStartOf="@+id/button_rating"
            app:layout_constraintTop_toBottomOf="@+id/button_rating" />

        <TextView
            android:id="@+id/textView_tomato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/procent"
            android:textSize="10sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/button_shape_yellow"
            app:layout_constraintStart_toStartOf="@+id/button_shape_yellow"
            app:layout_constraintTop_toBottomOf="@+id/button_shape_yellow" />

        <TextView
            android:id="@+id/textView_similar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/similar"
            android:textSize="10sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/button_shape_accent1"
            app:layout_constraintStart_toStartOf="@+id/button_shape_accent1"
            app:layout_constraintTop_toBottomOf="@+id/button_shape_accent1" />

        <TextView
            android:id="@+id/textView_movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_bottom"
            tools:text="@string/description_movie_totoro"/>

        <TextView
            android:id="@+id/num_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_rating"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/textView_rating"
            app:layout_constraintEnd_toEndOf="@+id/button_rating"
            app:layout_constraintStart_toStartOf="@+id/button_rating"
            app:layout_constraintTop_toTopOf="@+id/button_rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>